Colaboratory를 통해 생성됨

--- a/R_programming_4th.ipynb
+++ b/R_programming_4th.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPCSu8PBbXU0S6cKsTiPh3X",
+      "authorship_tag": "ABX9TyMR39LAX1JhNAOZpyIUKKs/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,6 +60,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#엑셀 등의 파일명은 별도 라이브러리 필요\n",
         "text_file <- read.table(\"/content/data_ex.txt\")\n",
         "View(text_file)\n",
         "text_file"
@@ -121,11 +122,73 @@
     {
       "cell_type": "code",
       "source": [
+        "#코랩에서 실행 불가\n",
+        "\n",
         "install.packages(\"jsonlite\")\n",
         "library(jsonlite)"
       ],
       "metadata": {
         "id": "RWG8e6acElGJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data(iris)\n",
+        "head(iris)\n",
+        "str(iris)\n",
+        "describe(iris)"
+      ],
+      "metadata": {
+        "id": "IZS17TN9FpCH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ncol(iris)\n",
+        "nrow(iris)\n",
+        "levels(iris$Species)"
+      ],
+      "metadata": {
+        "id": "V2mmP4IDGm-q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#빈도분석"
+      ],
+      "metadata": {
+        "id": "NJObrRLTHF75"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "install.packages(\"descr\")\n",
+        "library(descr)"
+      ],
+      "metadata": {
+        "id": "zvgXnP-UHWUK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#빈도 테이블 만들기\n",
+        "freq_test <- freq(iris$Petal.Length) "
+      ],
+      "metadata": {
+        "id": "vDBWEZoZHXOq"
       },
       "execution_count": null,
       "outputs": []
