Colaboratory를 통해 생성됨

--- a/R_programming_4th.ipynb
+++ b/R_programming_4th.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMR39LAX1JhNAOZpyIUKKs/",
+      "authorship_tag": "ABX9TyPkk95BZ+hf7Dx6DKoqVC4a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -185,7 +185,7 @@
       "cell_type": "code",
       "source": [
         "#빈도 테이블 만들기\n",
-        "freq_test <- freq(iris$Petal.Length) "
+        "freq_test <- freq(iris$Species) "
       ],
       "metadata": {
         "id": "vDBWEZoZHXOq"
