Colaboratory를 통해 생성됨

--- a/R_programming_쪽지시험.ipynb
+++ b/R_programming_쪽지시험.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPFcQ2Ph410Th6rnVkTRzza",
+      "authorship_tag": "ABX9TyNthpI1HmgJURrE0nTh9CGE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#99p - 2-2 3번 문제"
+        "#2-2 3~4번 문제 (99p)"
       ],
       "metadata": {
         "id": "aFgWae8Z9f1s"
@@ -51,6 +51,108 @@
         "example_test <- data.frame(ID,MID_EXAM,CLASS)\n",
         "example_test"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mean(example_test$MID_EXAM)"
+      ],
+      "metadata": {
+        "id": "VrxJjoIw-8z8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#3-1 4~6번 문제 (113p)"
+      ],
+      "metadata": {
+        "id": "VRJJu2Z4_q5r"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x <- c(1,3,5,7,9)\n",
+        "x"
+      ],
+      "metadata": {
+        "id": "dxO-ieah_p7O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y <- (\"Hello\")\n",
+        "y"
+      ],
+      "metadata": {
+        "id": "J-a5DbHd_5gh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num_three_return <- function(num1,num2,num3){\n",
+        "  sum <- num1 + num2 + num3\n",
+        "  return(sum)\n",
+        "}\n",
+        "\n",
+        "num_three_return(10,20,30)"
+      ],
+      "metadata": {
+        "id": "E7Ffz-HD_-5t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "library()"
+      ],
+      "metadata": {
+        "id": "j7VyiuqTAm1y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#3-2 3~4문제 (123p)"
+      ],
+      "metadata": {
+        "id": "0wlgOnwxBClj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "install.packages(\"reshape2\")"
+      ],
+      "metadata": {
+        "id": "6nC2ViF1BB9U"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "library(reshape2)"
+      ],
+      "metadata": {
+        "id": "ti83w8aABMyS"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
