Colaboratory를 통해 생성됨

--- a/R_programming_쪽지시험.ipynb
+++ b/R_programming_쪽지시험.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNthpI1HmgJURrE0nTh9CGE",
+      "authorship_tag": "ABX9TyP1D4/JB5leZe6X6MWPEMrj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -150,6 +150,77 @@
       ],
       "metadata": {
         "id": "ti83w8aABMyS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#3-3 2번 문제 (143p)"
+      ],
+      "metadata": {
+        "id": "lXzekJEKBx86"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age <- 40\n",
+        "\n",
+        "if (age < 13){\n",
+        "  print(\"어린이입니다.\")\n",
+        "} else if (age < 19){\n",
+        "  print(\"청소년입니다.\")\n",
+        "} else {\n",
+        "  print(\"성인입니다.\")\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "F-DXi928B4Uj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#4-1 3~7문제 (164p)"
+      ],
+      "metadata": {
+        "id": "LtEdZg-9En5K"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "exam <- read.table(\"경로명\",nrows = 1)"
+      ],
+      "metadata": {
+        "id": "TR5y5RODEnXF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "exam1 <- read.table(\"경로명\",sep = \"|\")"
+      ],
+      "metadata": {
+        "id": "Hh7E3FvkE-Q_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "install.packages(\"readxl\")\n",
+        "library(readxl)"
+      ],
+      "metadata": {
+        "id": "QrwR1jxrFKzx"
       },
       "execution_count": null,
       "outputs": []
