Colaboratory를 통해 생성됨

--- a/R_programming_쪽지시험.ipynb
+++ b/R_programming_쪽지시험.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyP1D4/JB5leZe6X6MWPEMrj",
+      "authorship_tag": "ABX9TyOhilvIAWLNqSkagQzFP8h1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -194,7 +194,7 @@
     {
       "cell_type": "code",
       "source": [
-        "exam <- read.table(\"경로명\",nrows = 1)"
+        "exam <- read.table(\"경로명.txt\",nrows = 1)"
       ],
       "metadata": {
         "id": "TR5y5RODEnXF"
@@ -205,7 +205,7 @@
     {
       "cell_type": "code",
       "source": [
-        "exam1 <- read.table(\"경로명\",sep = \"|\")"
+        "exam1 <- read.table(\"경로명.txt\",sep = \"|\")"
       ],
       "metadata": {
         "id": "Hh7E3FvkE-Q_"
@@ -221,6 +221,29 @@
       ],
       "metadata": {
         "id": "QrwR1jxrFKzx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "read_excel(\"경로명.xlsx\", sheet = 3)"
+      ],
+      "metadata": {
+        "id": "XVuRN_rGFgsB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "install.packages(\"jsonlite\")\n",
+        "library(jsonlite)"
+      ],
+      "metadata": {
+        "id": "i55o09m8GG61"
       },
       "execution_count": null,
       "outputs": []
