Colaboratory를 통해 생성됨

--- a/R_programming_쪽지시험.ipynb
+++ b/R_programming_쪽지시험.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOhilvIAWLNqSkagQzFP8h1",
+      "authorship_tag": "ABX9TyN1v0He3joqc8toTzTgTknO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -244,6 +244,60 @@
       ],
       "metadata": {
         "id": "i55o09m8GG61"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#4-3 연습문제 (203p)"
+      ],
+      "metadata": {
+        "id": "cuFQBSTiIhdg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y1 <- c(10,15,20,30,40,50,55,66,77,80,90,100,200,225)"
+      ],
+      "metadata": {
+        "id": "1q_aksDpImjT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "boxplot(y1)"
+      ],
+      "metadata": {
+        "id": "8z4_tT6xIvYR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "stem(y1)\n",
+        "#줄기는 3의 자리, 잎은 일의 자리에서 반올림"
+      ],
+      "metadata": {
+        "id": "aAT-MrpmJEMI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dotchart(y1)"
+      ],
+      "metadata": {
+        "id": "4OHkzrjbI1Lp"
       },
       "execution_count": null,
       "outputs": []
