Colaboratory를 통해 생성됨

--- a/R_programming_9주차.ipynb
+++ b/R_programming_9주차.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyN+Xwt9ehBUZ+NZIIvG806T",
+      "authorship_tag": "ABX9TyM0aIcVHeX/kk18WyDgpW88",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -132,8 +132,19 @@
     {
       "cell_type": "code",
       "source": [
+        "colors()"
+      ],
+      "metadata": {
+        "id": "1pdX9W3aRFyC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "ggplot(airquality, aes(x=Day,y=Temp)) +\n",
-        "  geom_line(lwd=1.5,color='blue',lty=2)"
+        "  geom_line(lwd=1.5,color='antiquewhite2',lty=2)"
       ],
       "metadata": {
         "id": "6a3ZdeDCKzwP"
@@ -189,10 +200,280 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "ggplot\n",
+        "- geom_boxplot = 상자그림 "
+      ],
+      "metadata": {
+        "id": "iGBvqhSDNqJ-"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ggplot(airquality, aes(x=Temp,y=Day,group=Temp)) +\n",
+        "  geom_boxplot()"
+      ],
       "metadata": {
         "id": "lGZ6HD6ANZWO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "install.packages(\"dplyr\")\n",
+        "library(dplyr)"
+      ],
+      "metadata": {
+        "id": "oIL-ODzBOUTD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "그래프 + 그래프\n",
+        "\n",
+        "1. ggplot() + geom_line() + geom_point()\n",
+        "2. ggplot() + geom_bar() + geom_line()\n",
+        "> 매개변수 차이로 실행 안됌 "
+      ],
+      "metadata": {
+        "id": "1J73Kt6RRbkC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ggplot(airquality, aes(x=Day,y=Temp)) +\n",
+        "  geom_line(color='red')+\n",
+        "  geom_point(pch=1)"
+      ],
+      "metadata": {
+        "id": "zbkov09VRoSa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ggplot(airquality, aes(x=Temp,y=Day)) +\n",
+        "  geom_line(color='red')+\n",
+        "  geom_bar(aes(Temp))\n",
+        "#오류"
+      ],
+      "metadata": {
+        "id": "Z1Aw7M09SDZ6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data(mtcars)\n",
+        "#범주형 데이터가 있는 데이터셋"
+      ],
+      "metadata": {
+        "id": "j0E_yzkTSiOq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ggplot(mtcars, aes(x=mpg,y=disp)) +\n",
+        "  geom_point(color='bisque4',size=2)\n",
+        "  #연비와 배기량의 관계 시각화 "
+      ],
+      "metadata": {
+        "id": "HvjYmp3jS1NW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "##회귀선  lm(x~y, 데이터)\n",
+        "model <- lm(mpg~disp, data=mtcars) #Linear regression Model\n",
+        "summary(model)\n",
+        "\n",
+        "'''\n",
+        "Residuals = 잔차 => 각 x값의 y값과 y예측값의 차이\n",
+        "\n",
+        "y = ax + b\n",
+        "a = coefficients 계수\n",
+        "b = intercept\n",
+        "\n",
+        "'''"
+      ],
+      "metadata": {
+        "id": "eIirdrInTxHx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model$coefficients\n",
+        "#안에 y = ax + b에 필요한 내용이 있음 \n",
+        "b = round(model$coefficients[1],2)\n",
+        "a = round(model$coefficients[2],2)"
+      ],
+      "metadata": {
+        "id": "cGSu4bsNV_EY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ggplot(mtcars, aes(y=mpg,x=disp)) +\n",
+        "  geom_point(color='bisque4',size=2) +\n",
+        "  geom_abline(intercept = b, slope = a,color='red')"
+      ],
+      "metadata": {
+        "id": "EBKORQgwWczu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ggplot(mtcars, aes(y=mpg,x=disp),fig.dim = c(20, 15)) +\n",
+        "  geom_point(aes(size=hp, color=wt))\n",
+        "#네개의 정보를 한 그래프에 표현"
+      ],
+      "metadata": {
+        "id": "HesBfSReX5uB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#추세선\n",
+        "ggplot(mtcars, aes(y=mpg,x=disp),fig.dim = c(20, 15)) +\n",
+        "  geom_point(aes(size=hp, color=wt)) + \n",
+        "  stat_smooth(color='gray2',fill='gray')"
+      ],
+      "metadata": {
+        "id": "ovqWehWjZTUA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ggplot(mtcars, aes(x= factor(cyl))) +\n",
+        "  geom_bar()"
+      ],
+      "metadata": {
+        "id": "Uy7qTqE0arBY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m <- mtcars %>% count(cyl)\n",
+        "m\n",
+        "\n",
+        "ggplot(m, aes(x = reorder(cyl, n),y = n)) +\n",
+        "  geom_bar(stat = 'identity') \n",
+        "# reorder = (a, b) < a를 b의 크기대로 정렬한다 "
+      ],
+      "metadata": {
+        "id": "OCLYav1VbLr3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#누적 막대그래프\n",
+        "\n",
+        "ggplot(mtcars, aes(x= factor(cyl))) + \n",
+        "  geom_bar(aes(fill = factor(gear)))"
+      ],
+      "metadata": {
+        "id": "m-KfqdRmd37n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#누적 막대그래프 (원형)\n",
+        "\n",
+        "ggplot(mtcars, aes(x= factor(cyl))) + \n",
+        "  geom_bar(aes(fill = factor(gear))) +\n",
+        "    coord_polar(theta = 'y') #theta는 원의 중심을 지정 "
+      ],
+      "metadata": {
+        "id": "6gMpcXvleOjP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "과제\n",
+        "1. 유인물 채우기\n",
+        "2. diamonds 데이터로 ppt "
+      ],
+      "metadata": {
+        "id": "2MRT1AvDeqju"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data(diamonds)\n",
+        "str(diamonds)\n"
+      ],
+      "metadata": {
+        "id": "60BM4gpugMpv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mutate(diamonds, price_range = cut(diamonds$price, breaks=c(0,1000,2000,2500,Inf),right = F,labels = c('Low','middleLow','middleHigh','High')))"
+      ],
+      "metadata": {
+        "id": "qpC-G7Omlmeq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ggplot(diamonds, aes(x= factor(clarity),y = price)) + \n",
+        "  geom_bar(stat=\"identity\",aes(fill = factor(price_range))) +\n",
+        "    geom_text(aes(label=price_range, hjust=0, vjust=0.5))"
+      ],
+      "metadata": {
+        "id": "XGBBhY90jvOJ"
       },
       "execution_count": null,
       "outputs": []
